# psf

./: .dockerignore  .gitattributes  .gitignore  API_DOCUMENTATION.md  Dockerfile.runpod  Dockerfile.serverless  PSF_FIELD_MAPPING_FIXES.md  PSF_INTEGRATION_GUIDE.md  PSF_INTEGRATION_UPDATE.md  PSF_VALIDATION_GATES_HANDOFF.md  README.md  RUNPOD_DEPLOYMENT.md  TECH_STACK.md  build_error.txt  docker-compose.yml  migrate.py  setup.bat  start.ps1  start_runpod.ps1  start_services.bat  stop_services.bat
.github/workflows/: build-serverless.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-prod.txt  requirements-serverless.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/analyzers/: __init__.py  comparison.py  content.py  face_region.py  facial.py  pose.py  report_generator.py  transcription.py  voice.py
backend/app/api/: __init__.py  dependencies.py  schemas.py
backend/app/api/routes/: __init__.py  analyses.py  golden_pitch.py  health.py  videos.py
backend/app/core/: __init__.py  config.py  exceptions.py  logging.py  storage.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/tasks/: __init__.py  analysis_tasks.py  celery_app.py  golden_pitch_tasks.py  video_tasks.py
backend/tests/: smoke_test_relevance.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: AISummary.tsx  ComparisonResults.tsx  GestureAnalysis.tsx  Tabs.tsx  (+11 more)
runpod/: .env.example  nginx.conf  start.sh  supervisord.conf
serverless/: handler.py
(+5 files in other folders)
